--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=institute-api
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/institute 
+
+
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/institute
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.com.institute=debug
