--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 spring.application.name=institute-api
 
-
-
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/institute
+spring.datasource.url=jdbc:mysql://localhost:3306/institute?useSSL=false&serverTimezone=Asia/Kolkata
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.enabled=false
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-logging.level.com.institute=debug
+logging.level.com.hurecom=error
+logging.level.org.hibernate=error
+logging.level.com.zaxxer.hikari=error
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
+logging.level.org.hibernate.orm.jdbc.bind=OFF
+logging.level.org.hibernate.orm.jdbc.extract=OFF
+
+spring.jpa.defer-datasource-initialization=true
